Bug 341175 - Address FindBugs issues in debug.core and debug.ui